Support multiple sponsor session entitlements
